--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
   </div>
   <div class="section-regular">
     <div data-w-id="85d18ac9-d410-22b2-df30-aca1b14041a7" style="opacity:0" class="container-small">
-      <h3>SUMARY :</h3>
+      <h3>SUMMARY :</h3>
       <p class="paragraph-large">
         <i class="fa-solid fa-computer"></i>
         • I have over 4 years of experience in developing User Interfaces for web applications as a Front-End UI developer.
