--- a/about.html
+++ b/about.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jun 20 2022 18:23:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="62b0baeb104e3ccee6045b15" data-wf-site="62b0baeb104e3c4861045b08">
 <head>
   <meta charset="utf-8">
