--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="images/webclip.svg" rel="apple-touch-icon">
 <!-- font awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+<link rel="stylesheet" href="./css/custom.css">
 
 <!-- end of font awesome -->
 </head>
@@ -134,7 +134,7 @@
               </a>
             </div>
              </div>
-           <img src="./images/frankdev.svg" alt="" class="logo-design">
+           <img src="./asset-img/tablet-1-designify.png" alt="" class="logo-design">
             
         </div>
       </div>
@@ -334,7 +334,7 @@
       <div class="awards-icon"><img src="images/Icon-4.svg" loading="lazy" alt="" class="image-awards"></div>
     </div> -->
     <!-- end of Award section -->
-    <div class="section-project">
+    <!-- <div class="section-project">
       <div class="container">
         <div class="heading-wrapper"><img src="images/Icon-1.svg" loading="lazy" alt="" class="icon-star">
           <div class="margin-bottom-16">
@@ -345,11 +345,14 @@
         <div class="w-dyn-list">
           <div role="list" class="w-dyn-items">
             <div role="listitem" class="project-item w-dyn-item">
-              <!--  project box section -->
-              <div id="w-node-fcf0f732-8d0a-5555-ce99-96e2b614c743-78045b0f" class="project-image-base"><img src="" width="460" alt="" class="project-image"></div>
-              
-              <!-- end of proejct box -->
-              <div class="project-content">
+               project box section -->
+           <!-- <div id="w-node-fcf0f732-8d0a-5555-ce99-96e2b614c743-78045b0f" class="project-image-base">
+                <img src="./asset-img/e-electric-page.png" width="460" alt="" class="project-image">
+                <img src="./asset-img/lading page.png" width="460" alt="" class="project-image">
+                <img src="./asset-img/street-culture-page.png" width="460" alt="" class="project-image">
+              </div>
+            end of proejct box -->
+              <!-- <div class="project-content">
                 <div class="badge-category">
                   <div class="project-category-text"></div>
                 </div>
@@ -363,7 +366,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Services section -->
     <!-- <div class="section-large">
       <div class="container">
@@ -458,6 +461,25 @@
       </div>
     </div> -->
     <!-- End of articles section -->
+                         <!-- Section Porject -->
+
+
+       <div class="section-project-container">
+         <div class="project-content">
+          <img src="images/Icon-3.svg" loading="lazy" alt="" class="header-small-icon">
+           <h2>My Past Project</h2>
+          <h3>Regonitions & Accoimlishments</h3>
+         </div>
+         <div class="project-img-link">
+          <img src="./asset-img/e-electric-page.png" alt="Electric product selling page">
+          <img src="./asset-img/lading page.png" alt="Landing page">
+          <img src="./asset-img/street-culture-page.png" alt="Street culture fashion page">
+          <img src="./asset-img/fashion-page.png" alt="Fashion salon services porfolio">
+         </div>
+       </div>
+
+
+            <!-- End of section project -->
     <div class="section-newsletter">
       <div class="container-footer">
         <div class="newsletter-wrapper">
