--- a/about.html
+++ b/about.html
@@ -319,14 +319,24 @@
         <h1 class="h1-heading">Get in touch today!</h1>
         <p class="paragraph-large align---centered">We are looking forward to work with you on your next web design project!</p>
       </div>
+      <!-- Form editing -->
       <div class="form-block w-form">
-        <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form"><label for="Name-Form" class="field-label">Name <span class="text-span">*</span></label><input type="text" class="text-field-white w-input" maxlength="256" name="Name-Form" data-name="Name Form" placeholder="" id="Name-Form" required=""><label for="Subject-Form" class="field-label">Subject <span class="text-span">*</span></label><input type="text" class="text-field-white w-input" maxlength="256" name="Subject-Form" data-name="Subject Form" placeholder="" id="Subject-Form" required=""><label for="Email-Form" class="field-label">Work Mail <span class="text-span">*</span></label><input type="email" class="text-field-white w-input" maxlength="256" name="Email-Form" data-name="Email Form" placeholder="" id="Email-Form" required=""><label for="Message-Form" class="field-label">Subject <span class="text-span">*</span></label><textarea id="Message-Form" name="Message-Form" maxlength="5000" data-name="Message Form" placeholder="Type your subject here" required="" class="text-field-white w-input"></textarea>
+        <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form" action="https://submit-form.com/j8ETOtsz">
+          <label for="Name-Form" class="field-label">Name <span class="text-span">*</span></label>
+          <input type="text" class="text-field-white w-input" maxlength="256" name="Name-Form" data-name="Name Form" placeholder="" id="Name-Form" required="">
+          <label for="Subject-Form" class="field-label">Subject <span class="text-span">*</span></label>
+          <input type="text" class="text-field-white w-input" maxlength="256" name="Subject-Form" data-name="Subject Form" placeholder="" id="Subject-Form" required="">
+          <label for="Email-Form" class="field-label">Work Mail <span class="text-span">*</span></label>
+          <input type="email" class="text-field-white w-input" maxlength="256" name="Email-Form" data-name="Email Form" placeholder="" id="Email-Form" required="">
+          <label for="Message-Form" class="field-label">Subject <span class="text-span">*</span></label>
+          <textarea id="Message-Form" name="Message-Form" maxlength="5000" data-name="Message Form" placeholder="Type your subject here" required="" class="text-field-white w-input"></textarea>
           <div class="form-container">
             <a href="#" class="button-submit w-inline-block">
-              <div>Submit Now</div>
+              <div type="submit">Submit Now</div>
             </a>
           </div>
         </form>
+        <!-- End of form editting -->
         <div class="success-message w-form-done">
           <div>Thank you! Your submission has been received!</div>
         </div>
