--- a/about.html
+++ b/about.html
@@ -332,7 +332,7 @@
           <textarea id="Message-Form" name="Message-Form" maxlength="5000" data-name="Message Form" placeholder="Type your subject here" required="" class="text-field-white w-input"></textarea>
           <div class="form-container">
             <a href="#" class="button-submit w-inline-block">
-              <div type="submit">Submit Now</div>
+              <button class="button-submit w-inline-block" type="submit">Submit Now</button>
             </a>
           </div>
         </form>
