developme new blog page

--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@
             using UML.</p>
     </div>
     <!-- Award section -->
-    <!-- <div class="customer-icon"><img src="images/Icon-2.svg" loading="lazy" alt="" class="image-customer"></div>
+     <div class="customer-icon"><img src="images/Icon-2.svg" loading="lazy" alt="" class="image-customer"></div>
   </div>
   <div class="section-regular">
     <div class="container">
@@ -337,9 +337,9 @@
         </a>
       </div>
     </div>
-  </div> -->
+  </div> 
 
-  <!--  -->
+ 
   <div id="Contact" class="section-contact">
     <div class="container">
       <div class="heading-wrapper"><img src="images/Icon-1.svg" loading="lazy" alt="" class="icon-star">
