--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
                 <div class="navigation-menu-line"></div>
               </div>
             </a>
+            <a href="about.html" class="nav-link w-inline-block">
+              <div class="menu-text-block">
+                <div>Blogs</div>
+                <div class="navigation-menu-line"></div>
+              </div>
+            </a>
+            <a href="about.html" class="nav-link w-inline-block">
+              <div class="menu-text-block">
+                <div>Services Offer</div>
+                <div class="navigation-menu-line"></div>
+              </div>
+            </a>
           </nav>
           <div class="navigation-right">
             <div class="menu-button w-nav-button">
@@ -71,7 +83,7 @@
               <h1>
                 HI, I'M HOANG LE.</h1>
               <div class="header-icon-wrapper">
-                <h1>FRONT END DEVELOPER </h1>
+                <h1>Webside Developer </h1>
                 
               </div>
               <h1>BASED IN <span class="header-striked">SAN FRANCISCO BAY AREA</span></h1>
