--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <h1>
                 HI, I'M HOANG LE.</h1>
               <div class="header-icon-wrapper">
-                <h1>Webside Developer </h1>
+                <h1>Website Developer </h1>
                 
               </div>
               <h1>BASED IN <span class="header-striked">SAN FRANCISCO BAY AREA</span></h1>
