calendly feature link

--- a/about.html
+++ b/about.html
@@ -360,6 +360,11 @@
           <div class="form-container">
             <button type="submit" class="form-button">Submit</button>
           </div>
+          <!-- Calendly badge widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet"> 
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/direct-kkm', text: 'Schedule time with me', color: '#0069ff', textColor: '#ffffff', branding: true }); }</script>
+<!-- Calendly badge widget end -->
         </form>
         <!-- End of form editting -->
         <div class="success-message w-form-done">
