--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 </head>
 <body>
   <div class="full-page">
+    <!-- Calendly badge widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/direct-kkm', text: 'Schedule time with me', color: '#0069ff', textColor: '#ffffff', branding: true }); }</script>
+<!-- Calendly badge widget end -->
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
       <div class="navigation-wrapper">
         <div class="container-navigation">
@@ -534,9 +539,9 @@
             <div id="w-node-_171b13e9-2079-fea8-0f75-2bf17dd20a4f-7dd20a3c" class="footer-wrapper">
               <p class="body-small-normal title-gray-100">Made by Hoang Le</p>
               <div class="w-layout-grid grid-footer-social">
-                <a href="#" class="social-link w-inline-block"><img src="images/Icon-LinkedIn.svg" loading="lazy" alt=""></a>
+                <a href="https://www.linkedin.com/in/hoang-le-4b11b223b/" class="social-link w-inline-block"><img src="images/Icon-LinkedIn.svg" loading="lazy" alt=""></a>
                 <a href="#" class="social-link w-inline-block"><img src="images/Icon-Twitter.svg" loading="lazy" alt=""></a>
-                <a href="#" class="social-link w-inline-block"><img src="images/Icon-Instagram.svg" loading="lazy" alt=""></a>
+                <a href="https://www.instagram.com/localexpresx/" class="social-link w-inline-block"><img src="images/Icon-Instagram.svg" loading="lazy" alt=""></a>
               </div>
             </div>
           </div>
