--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
           <div class="menu-button w-nav-button">
             <div class="w-icon-nav-menu"></div>
           </div>
-          <a href="#" class="button-nav w-button">
+          <a href="about.html#contact" class="button-nav w-button">
             <div>Let&#x27;s talk</div>
           </a>
         </div>
@@ -347,7 +347,7 @@
         <p class="paragraph-large align---centered">We are looking forward to work with you on your next web design project!</p>
       </div>
       <!-- Form editing -->
-      <div class="form-block w-form">
+      <div class="form-block w-form" id="contact">
         <form id="email-form" name="email-form" data-name="Email Form" method="get" class="form" action="https://submit-form.com/j8ETOtsz">
           <label for="Name-Form" class="field-label">Name <span class="text-span">*</span></label>
           <input type="text" class="text-field-white w-input" maxlength="256" name="Name-Form" data-name="Name Form" placeholder="" id="Name-Form" required="">
@@ -384,7 +384,7 @@
           <div class="number-block-circle"><img src="images/Icon-Message.svg" loading="lazy" alt=""></div>
           <div>
             <h6 class="heading-title">Message Me</h6>
-            <p class="paragraph-regular-2">frankdev0428@gmail.com</p>
+            <p class="paragraph-regular-2">direct@frankvisionary.com</p>
           </div>
         </div>
         <div id="w-node-adbeacd1-27f1-3cfc-7916-6fed41bace9a-e6045b15" class="contact-block">
