--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="menu-button w-nav-button">
               <div class="w-icon-nav-menu"></div>
             </div>
-            <a href="#" class="button-nav w-button">
+            <a href="about.html#contact" class="button-nav w-button">
               <div>Let&#x27;s talk</div>
             </a>
           </div>
