--- a/about.html
+++ b/about.html
@@ -55,6 +55,13 @@
 <!-- End of stylesheet -->
 </head>
 <body>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-M1HZ726T26');
+  </script>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
     <div class="navigation-wrapper">
       <div class="container-navigation">
