--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 <!-- end of font awesome -->
 </head>
 <body>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-M1HZ726T26');
+  </script>
+  
   <div class="full-page">
     <!-- Calendly badge widget begin -->
 <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
