--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <h1>Website Developer </h1>
                 
               </div>
-              <h1>BASED IN <span class="header-striked">SAN FRANCISCO BAY AREA</span></h1>
+              <h1>BASED IN SAN FRANCISCO BAY AREA</h1>
             </div>
             <!-- Header wrap edit -->
             <div class="header-detail-wrapper">
