--- a/about.html
+++ b/about.html
@@ -293,7 +293,7 @@
   
     <div class="awards-icon"><img src="images/Icon-4.svg" loading="lazy" alt="" class="image-awards"></div>
   </div>
-  <div class="section-large">
+  <div class="section-large" id="servicesOffer">
     <div class="container">
       <div class="heading-wrapper"><img src="images/Icon-1.svg" loading="lazy" alt="" class="icon-star">
         <div class="margin-bottom-16">
