--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
                 <div class="navigation-menu-line"></div>
               </div>
             </a>
-            <a href="about.html" class="nav-link w-inline-block">
+            <a href="about.html#contact" class="nav-link w-inline-block">
               <div class="menu-text-block">
                 <div>Contact</div>
                 <div class="navigation-menu-line"></div>
               </div>
             </a>
             <a href="about.html" class="nav-link w-inline-block">
-              <div class="menu-text-block">
+              <!-- <div class="menu-text-block">
                 <div>Blogs</div>
                 <div class="navigation-menu-line"></div>
-              </div>
+              </div> -->
             </a>
-            <a href="about.html" class="nav-link w-inline-block">
+            <a href="about.html#servicesOffer" class="nav-link w-inline-block">
               <div class="menu-text-block">
                 <div>Services Offer</div>
                 <div class="navigation-menu-line"></div>
