porfolio section modify

--- a/index.html
+++ b/index.html
@@ -287,221 +287,34 @@
         </div>
       </div>
     </div>
-    <!-- Award section -->
-    <!-- <div class="section-regular">
-      <div class="container">
-        <div id="w-node-f498980c-1edc-b91a-06e7-3c20833debd4-833debd2" class="heading-wrapper"><img src="images/Icon-1.svg" loading="lazy" alt="" class="icon-star">
-          <h2>Awards</h2>
-          <h6 class="heading-medium margin-top-8">REGONITIONS &amp; ACCOIMPLISHMENTS</h6>
-        </div>
-        <div id="w-node-f498980c-1edc-b91a-06e7-3c20833debda-833debd2" class="w-layout-grid card-grid">
-          <a href="https://dribbble.com/" target="_blank" class="award-card w-inline-block">
-            <div class="card-content">
-              <div class="number-block">
-                <p class="paragraph-large">1</p>
-              </div>
-              <div class="card-content-text">
-                <h5 id="w-node-f498980c-1edc-b91a-06e7-3c20833debe1-833debd2" class="award-heading">Webflow Awwwards Team</h5>
-                <p class="paragraph-large">Runner Up - Webflow Expert Design</p>
-              </div>
-            </div>
-            <div class="date-detail-wrapper">
-              <div class="paragraph-regular">PRODUCT DESIGN</div>
-              <div class="paragraph-regular">2022</div>
-            </div>
-          </a>
-          <a href="https://dribbble.com/" target="_blank" class="award-card w-inline-block">
-            <div class="card-content">
-              <div class="number-block">
-                <p class="paragraph-large">2</p>
-              </div>
-              <div class="card-content-text">
-                <h5 id="w-node-f498980c-1edc-b91a-06e7-3c20833debf0-833debd2" class="award-heading">Webflow Awwwards Team</h5>
-                <p class="paragraph-large">Runner Up - Webflow Expert Design</p>
-              </div>
-            </div>
-            <div class="date-detail-wrapper">
-              <div class="paragraph-regular">DEVELOPMENT</div>
-              <div class="paragraph-regular">2021</div>
-            </div>
-          </a>
-          <a href="https://dribbble.com/" target="_blank" class="award-card w-inline-block">
-            <div class="card-content">
-              <div class="number-block">
-                <p class="paragraph-large">3</p>
-              </div>
-              <div class="card-content-text">
-                <h5 id="w-node-f498980c-1edc-b91a-06e7-3c20833debff-833debd2" class="award-heading">Webflow Awwwards Team</h5>
-                <p class="paragraph-large">Runner Up - Webflow Expert Design</p>
-              </div>
-            </div>
-            <div class="date-detail-wrapper">
-              <div class="paragraph-regular">BRANDING</div>
-              <div class="paragraph-regular">2018</div>
-            </div>
-          </a>
-          <a href="https://dribbble.com/" target="_blank" class="award-card w-inline-block">
-            <div class="card-content">
-              <div class="number-block">
-                <p class="paragraph-large">4</p>
-              </div>
-              <div class="card-content-text">
-                <h5 id="w-node-f498980c-1edc-b91a-06e7-3c20833dec0e-833debd2" class="award-heading">Webflow Awwwards Team</h5>
-                <p class="paragraph-large">Runner Up - Webflow Expert Design</p>
-              </div>
-            </div>
-            <div class="date-detail-wrapper">
-              <div class="paragraph-regular">PRODUCT DESIGN</div>
-              <div class="paragraph-regular">2014</div>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="awards-icon"><img src="images/Icon-4.svg" loading="lazy" alt="" class="image-awards"></div>
-    </div> -->
-    <!-- end of Award section -->
-    <!-- <div class="section-project">
-      <div class="container">
-        <div class="heading-wrapper"><img src="images/Icon-1.svg" loading="lazy" alt="" class="icon-star">
-          <div class="margin-bottom-16">
-            <h2>My Past projects</h2>
-          </div>
-          <h6 class="heading-medium">REGONITIONS &amp; ACCOIMPLISHMENTS</h6>
-        </div>
-        <div class="w-dyn-list">
-          <div role="list" class="w-dyn-items">
-            <div role="listitem" class="project-item w-dyn-item">
-               project box section -->
-           <!-- <div id="w-node-fcf0f732-8d0a-5555-ce99-96e2b614c743-78045b0f" class="project-image-base">
-                <img src="./asset-img/e-electric-page.png" width="460" alt="" class="project-image">
-                <img src="./asset-img/lading page.png" width="460" alt="" class="project-image">
-                <img src="./asset-img/street-culture-page.png" width="460" alt="" class="project-image">
-              </div>
-            end of proejct box -->
-              <!-- <div class="project-content">
-                <div class="badge-category">
-                  <div class="project-category-text"></div>
-                </div>
-                
-                <a href="#" class="project-link">Read More</a>
-              </div>
-            </div>
-          </div>
-          <div class="w-dyn-empty">
-            <div>No items found.</div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <!-- Services section -->
-    <!-- <div class="section-large">
-      <div class="container">
-        <div class="heading-wrapper"><img src="images/Icon-1.svg" loading="lazy" alt="" class="icon-star">
-          <div class="margin-bottom-16">
-            <h2>Services</h2>
-          </div>
-          <h6 class="heading-medium">REGONITIONS &amp; ACCOIMPLISHMENTS</h6>
-        </div>
-        <div class="w-layout-grid service-grid">
-          <a href="index.html" aria-current="page" class="service-card w-inline-block w--current">
-            <div class="margin-bottom-24">
-              <h4>Web Design</h4>
-            </div>
-            <div class="paragraph-large">Every single project is a challenge that we accept eagerly. Let’s implement innovative ideas together!</div>
-          </a>
-          <a href="about.html" class="service-card w-inline-block">
-            <div class="margin-bottom-24">
-              <h4>Product Design</h4>
-            </div>
-            <div class="paragraph-large">Every single project is a challenge that we accept eagerly. Let’s implement innovative ideas together!</div>
-          </a>
-          <a href="about.html" class="service-card w-inline-block">
-            <div class="margin-bottom-24">
-              <h4>UI/UX Design</h4>
-            </div>
-            <div class="paragraph-large">Every single project is a challenge that we accept eagerly. Let’s implement innovative ideas together!</div>
-          </a>
-          <a href="about.html" class="service-card w-inline-block">
-            <div class="margin-bottom-24">
-              <h4>Art Direction</h4>
-            </div>
-            <div class="paragraph-large">Every single project is a challenge that we accept eagerly. Let’s implement innovative ideas together!</div>
-          </a>
-        </div>
-      </div>
-    </div> -->
-    <!-- Customer storage -->
-    <!-- <div class="section-regular">
-      <div class="customer-icon"><img src="images/Icon-2.svg" loading="lazy" alt="" class="image-customer"></div>
-      <div class="container">
-        <div class="heading-wrapper"><img src="images/Icon-1.svg" loading="lazy" alt="" class="icon-star">
-          <h2>Happy Customer</h2>
-        </div>
-        <div class="w-layout-grid grid-customer-logo">
-          <div id="w-node-_83c216a6-f263-c715-3aad-dfefc564e320-c564e317" data-w-id="83c216a6-f263-c715-3aad-dfefc564e320" class="customer-logo"><img src="images/Customer-Logo-Dark-2.svg" loading="lazy" alt="" class="logo-dark"><img src="images/Customer-Logo-White-4.svg" loading="lazy" alt="" class="logo-light"></div>
-          <div id="w-node-_83c216a6-f263-c715-3aad-dfefc564e323-c564e317" data-w-id="83c216a6-f263-c715-3aad-dfefc564e323" class="customer-logo"><img src="images/Customer-Logo-Dark-5.svg" loading="lazy" alt="" class="logo-dark"><img src="images/Customer-Logo-White-5.svg" loading="lazy" alt="" class="logo-light"></div>
-          <div id="w-node-_83c216a6-f263-c715-3aad-dfefc564e326-c564e317" data-w-id="83c216a6-f263-c715-3aad-dfefc564e326" class="customer-logo"><img src="images/Customer-Logo-Dark-3.svg" loading="lazy" alt="" class="logo-dark"><img src="images/Customer-Logo-White-3.svg" loading="lazy" alt="" class="logo-light"></div>
-          <div id="w-node-_83c216a6-f263-c715-3aad-dfefc564e329-c564e317" data-w-id="83c216a6-f263-c715-3aad-dfefc564e329" class="customer-logo"><img src="images/Customer-Logo-Dark-1.svg" loading="lazy" alt="" class="logo-dark"><img src="images/Customer-Logo-White-6.svg" loading="lazy" alt="" class="logo-light"></div>
-          <div id="w-node-_83c216a6-f263-c715-3aad-dfefc564e32c-c564e317" data-w-id="83c216a6-f263-c715-3aad-dfefc564e32c" class="customer-logo"><img src="images/Customer-Logo-Dark-3.svg" loading="lazy" alt="" class="logo-dark"><img src="images/Customer-Logo-White-3.svg" loading="lazy" alt="" class="logo-light"></div>
-          <div id="w-node-_83c216a6-f263-c715-3aad-dfefc564e32f-c564e317" data-w-id="83c216a6-f263-c715-3aad-dfefc564e32f" class="customer-logo"><img src="images/Customer-Logo-Dark-2.svg" loading="lazy" alt="" class="logo-dark"><img src="images/Customer-Logo-White-4.svg" loading="lazy" alt="" class="logo-light"></div>
-          <div id="w-node-_83c216a6-f263-c715-3aad-dfefc564e332-c564e317" data-w-id="83c216a6-f263-c715-3aad-dfefc564e332" class="customer-logo"><img src="images/Customer-Logo-Dark-1.svg" loading="lazy" alt="" class="logo-dark"><img src="images/Customer-Logo-White-6.svg" loading="lazy" alt="" class="logo-light"></div>
-          <div id="w-node-_83c216a6-f263-c715-3aad-dfefc564e335-c564e317" data-w-id="83c216a6-f263-c715-3aad-dfefc564e335" class="customer-logo"><img src="images/Customer-Logo-Dark-5.svg" loading="lazy" alt="" class="logo-dark"><img src="images/Customer-Logo-White-5.svg" loading="lazy" alt="" class="logo-light"></div>
-        </div>
-      </div>
-    </div> -->
-    <!-- customer storage -->
-    <!-- <div class="section-article">
-      <div class="article-icon"><img src="images/Icon-5.svg" loading="lazy" alt="" class="image-article"></div>
-      <div class="container">
-        <div class="heading-wrapper"><img src="images/Icon-1.svg" loading="lazy" alt="" class="icon-star">
-          <div class="margin-bottom-16">
-            <h2>Articles</h2>
-          </div>
-          <h6 class="heading-medium margin-top-8">REGONITIONS &amp; ACCOIMPLISHMENTS</h6>
-        </div>
-        <div class="w-dyn-list">
-          <div role="list" class="collection-list w-dyn-items">
-            <div role="listitem" class="w-dyn-item">
-              <a href="#" class="blog-card w-inline-block">
-                <div class="w-layout-grid grid-article-text">
-                  <div class="card-content-text">
-                    <div class="blog-detail-wrapper">
-                      <div class="blog-title"></div>
-                      <div class="blog-title">/</div>
-                      <div class="blog-title"></div>
-                    </div>
-                    <h5 id="w-node-ac3a39ad-6470-e063-e5b8-0f063cd64e36-78045b0f"></h5>
-                  </div>
-                  <p id="w-node-ac3a39ad-6470-e063-e5b8-0f063cd64e38-78045b0f"></p>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="w-dyn-empty">
-            <div>No items found.</div>
-          </div>
-        </div>
-        <a href="about.html" class="button-article w-button">
-          <div>Browse Articles</div>
-        </a>
-      </div>
-    </div> -->
-    <!-- End of articles section -->
-                         <!-- Section Porject -->
-
-
+ 
        <div class="section-project-container">
-         <div class="project-content">
-          <img src="images/Icon-3.svg" loading="lazy" alt="" class="header-small-icon">
-           <h2>My Past Project</h2>
-          <h3>Regonitions & Accoimlishments</h3>
-         </div>
-         <div class="project-img-link">
-          <img src="./images/project/Founder of Frank Visionary Enterprises copy.jpg" alt="Electric product selling page">
-          <img src="./asset-img/lading page.png" alt="Landing page">
-          <img src="./asset-img/street-culture-page.png" alt="Street culture fashion page">
-          <img src="./asset-img/fashion-page.png" alt="Fashion salon services porfolio">
-         </div>
+        <div id="carouselExampleIndicators" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./images/AGP-portfolio.webp" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./images/Yards360-portfolio.webp" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./images/Thomas-portfolio.webp" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
        </div>
 
 
